Cleaned some things

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
 ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
 ProjectSettings/ShaderGraphSettings.asset
+Assets/XR/Settings/Open XR Package Settings.asset
