More note variaty

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ ProjectSettings/Packages/com.unity.learn.iet-framework/Settings.json
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
 ProjectSettings/ShaderGraphSettings.asset
 Assets/XR/Settings/Open XR Package Settings.asset
+Assets/Nicrom/PolyPacks/Wind/UpgradePackages/LPW_HDRP_Unity2019.3.15+.unitypackage.meta
+Assets/Nicrom/PolyPacks/Wind/UpgradePackages/LPW_HDRP_Unity2020.2.1+.unitypackage.meta
+Assets/Nicrom/PolyPacks/Wind/UpgradePackages/LPW_URP_Unity2019.3.15+.unitypackage.meta
